--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
  <li><a href="index.html">Home</a></li>
 <li><a href="AboutMe.html">About Me</a></li>
 <li><a href="AbouttheQuiz.html">About the Quiz</a></li>
+<li><a href="StartNow.html">StartNow</a></li>
 
 </ul>
 </div>
@@ -54,5 +55,6 @@ Phasellus ac venenatis sapien. Nunc in nisl feugiat leo malesuada feugiat ultric
 Aliquam finibus ullamcorper odio ac iaculis. Donec tempor nibh tellus, non porta nunc dignissim et. Sed consequat rutrum ante, et interdum nibh scelerisque eget. Fusce et hendrerit neque, id posuere quam. Maecenas ac leo aliquam, tincidunt sem eu, blandit nisl. Morbi ut tellus feugiat, molestie magna vitae, condimentum ex. Nulla facilisi. Aenean quis felis risus. Donec vestibulum pellentesque metus, sit amet sagittis risus posuere vel. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras hendrerit auctor elementum. Mauris id quam metus. In vel ligula sapien. Maecenas augue metus, laoreet eu risus tempor, ornare luctus neque. Curabitur justo turpis, laoreet a dapibus eget, vehicula ac urna.
 
 Curabitur pellentesque nibh quis ipsum consequat ullamcorper. Ut velit felis, consequat et imperdiet at, gravida mollis odio. Cras quis elit quis urna dapibus vestibulum. Etiam interdum eleifend nisl consequat luctus. Phasellus ac neque venenatis, vehicula orci eu, blandit sem. Suspendisse sodales mi diam, eget ultricies nisi venenatis et. Quisque vulputate maximus ante vel maximus. In at ullamcorper leo.</p>
+
 </body>
 </html>
